# ros-intro-project

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_image/share/ros2_image/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_image_transform/lib/ros2_image_transform/: image.py
install/ros2_image_transform/local/lib/python3.10/dist-packages/ros2_image_transform-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/ros2_image_transform/share/ros2_image_transform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_keyboard/lib/ros2_keyboard/: key_pub
install/ros2_keyboard/share/ros2_keyboard/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
install/ros2_webcam/lib/ros2_webcam/: webcam_pub
install/ros2_webcam/share/ros2_webcam/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/intro-bot/: CMakeLists.txt  package.xml
src/intro-bot/model/: my_r2d2.urdf.xacro  robot.xacro
src/keyboard_ros2/: CMakeLists.txt  package.xml
src/keyboard_ros2/src/: key_publisher.cpp
src/ros2_image_transform/: CMakeLists.txt
src/ros2_image_transform/install/: local_setup.sh  setup.ps1  setup.sh
src/ros2_image_transform/install/ros2_image_transform/lib/ros2_image_transform/: image.py
src/ros2_image_transform/install/ros2_image_transform/share/ros2_image_transform/: local_setup.sh  package.sh
src/ros2_image_transform/log/: latest_build
src/ros2_image_transform/scripts/: image.py
src/ros2_keyboard/: CMakeLists.txt
src/ros2_keyboard/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_keyboard/install/ros2_keyboard/lib/ros2_keyboard/: key_pub
src/ros2_keyboard/install/ros2_keyboard/share/ros2_keyboard/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh
src/ros2_keyboard/install/ros2_keyboard/share/ros2_keyboard/cmake/: ros2_keyboardConfig.cmake
src/ros2_keyboard/log/: latest_build
src/ros2_keyboard/scripts/: keypress_publisher.py
src/ros2_keyboard/src/: key_publisher.cpp
src/ros2_webcam/: CMakeLists.txt
src/ros2_webcam/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_webcam/install/ros2_webcam/lib/ros2_webcam/: display.py  image_transform.py  image_transformer.py
src/ros2_webcam/install/ros2_webcam/local/lib/python3.10/dist-packages/ros2_webcam-0.0.0-py3.10.egg-info/: PKG-INFO  top_level.txt
src/ros2_webcam/install/ros2_webcam/share/ros2_webcam/: local_setup.sh  package.dsv  package.ps1  package.sh
src/ros2_webcam/install/ros2_webcam/share/ros2_webcam/cmake/: ros2_webcamConfig.cmake
src/ros2_webcam/log/: latest_build
src/ros2_webcam/scripts/: display.py  image_transform.py  image_transformer.py  python_program.py  webcam_image_subscriber.py
src/ros2_webcam/src/: image_transformer.py  simple_publisher.cpp  simple_subscriber.cpp  webcam_image_publisher.cpp
src/simulation-intro/: CMakeLists.txt  package.xml
src/simulation-intro/launch/: display.launch.py  gazebo.launch.py
src/simulation-intro/log/: latest_build
src/simulation-intro/src/: my_node.cpp
src/simulation-intro/urdf/: lunabot.urdf
